--- a/1412/01_mastermind/mastermind_submissions.yml
+++ b/1412/01_mastermind/mastermind_submissions.yml
@@ -10,13 +10,18 @@ submissions:
       Breaking Logic into Components: 0
   Austin Wood:
     repository: https://github.com/indiesquidge/mastermind.git
-    notes: '(filled in by instructor)'
+    notes: 'Limit your paths and exit points.
+            Work on decomposing responsibilities.
+            Write a larger number of tests to mimic flow of the app
+            and error/boundary cases.
+            REPL works well but the feedback is...questionable.
+            '
     evaluation:
-      Fundamental Ruby & Style: 0
-      Enumerable & Collections: 0
-      Test-Driven Development: 0
-      REPL Interface: 0
-      Breaking Logic into Components: 0
+      Fundamental Ruby & Style: 3
+      Enumerable & Collections: 3
+      Test-Driven Development: 2
+      REPL Interface: 3
+      Breaking Logic into Components: 2
   DJ Greenfield:
     repository: https://github.com/AllPurposeName/mastermind
     notes: '(filled in by instructor)'
