--- a/1410/06_mini_project/06_mini_project.yml
+++ b/1410/06_mini_project/06_mini_project.yml
@@ -27,7 +27,7 @@ submissions:
     repository: https://github.com/...
     setup_notes: ""
   Bhargavi Satpathy:
-    repository: https://github.com/...
+    repository: https://github.com/bhargavisatpathy/secured_ideabox
     setup_notes: ""
   Krista A Nelson:
     repository: https://github.com/...
