--- a/1410/06_mini_project/06_mini_project.yml
+++ b/1410/06_mini_project/06_mini_project.yml
@@ -3,7 +3,7 @@ submissions:
     repository: https://github.com/...
     setup_notes: ""
   Laura Whalin:
-    repository: https://github.com/...
+    repository: https://github.com/laurawhalin/idea_box_rails
     setup_notes: ""
   Jeff Wan:
     repository: https://github.com/...
