--- a/1410/06_mini_project/06_mini_project.yml
+++ b/1410/06_mini_project/06_mini_project.yml
@@ -45,5 +45,5 @@ submissions:
     repository: https://github.com/...
     setup_notes: ""
   Lydia Shafer:
-    repository: https://github.com/...
+    repository: https://github.com/Lydias303/authentication-idea-box
     setup_notes: ""
