--- a/1410/06_mini_project/06_mini_project.yml
+++ b/1410/06_mini_project/06_mini_project.yml
@@ -42,7 +42,7 @@ submissions:
     repository: https://github.com/...
     setup_notes: ""
   Chris Luhring:
-    repository: https://github.com/...
+    repository: https://github.com/cluhring/ideabox_rails
     setup_notes: ""
   Lydia Shafer:
     repository: https://github.com/Lydias303/authentication-idea-box
