--- a/1410/06_mini_project/06_mini_project.yml
+++ b/1410/06_mini_project/06_mini_project.yml
@@ -15,7 +15,7 @@ submissions:
     repository: https://github.com/...
     setup_notes: ""
   Emily Berkeley:
-    repository: https://github.com/...
+    repository: https://github.com/EmilyMB/idea_box_rails
     setup_notes: ""
   Alexandra Robinson:
     repository: https://github.com/...
