--- a/1410/06_mini_project/06_mini_project.yml
+++ b/1410/06_mini_project/06_mini_project.yml
@@ -12,7 +12,7 @@ submissions:
     repository: https://github.com/...
     setup_notes: ""
   Nathan Owsiany:
-    repository: https://github.com/...
+    repository: https://github.com/ndwhtlssthr/idea_box_rails.git
     setup_notes: ""
   Emily Berkeley:
     repository: https://github.com/...
