--- a/1502/01_mastermind.yml
+++ b/1502/01_mastermind.yml
@@ -8,7 +8,7 @@ submissions:
       REPL Interface and Game Functionality: 0
       Breaking Logic into Components: 0
   Chelsea Worrel
-      repository: your_github_repo_url
+      repository: https://github.com/chelseaworrel/mastermind_2.0.git
     notes: '(filled in by instructor)'
     evaluation:
       Fundamental Ruby & Style: 0
