--- a/1502/01_mastermind.yml
+++ b/1502/01_mastermind.yml
@@ -136,7 +136,7 @@ submissions:
       REPL Interface and Game Functionality: 0
       Breaking Logic into Components: 0
   Tess Griffin
-    repository: your_github_repo_url
+    repository: https://github.com/tessgriffin/mastermind-1
     notes: '(filled in by instructor)'
     evaluation:
       Fundamental Ruby & Style: 0
