--- a/1502/01_mastermind.yml
+++ b/1502/01_mastermind.yml
@@ -72,7 +72,7 @@ submissions:
       REPL Interface and Game Functionality: 0
       Breaking Logic into Components: 0
   Kristina Brown
-    repository: your_github_repo_url
+    repository: https://github.com/kristinabrown/mastermind
     notes: '(filled in by instructor)'
     evaluation:
       Fundamental Ruby & Style: 0
