--- a/1502/01_mastermind.yml
+++ b/1502/01_mastermind.yml
@@ -1,6 +1,6 @@
 submissions:
   Andrew Carmer
-    repository: your_github_repo_url
+    repository: https://github.com/Carmer/Mastermind/tree/final_mastermind
     notes: '(filled in by instructor)'
     evaluation:
       Fundamental Ruby & Style: 0
