--- a/1502/01_mastermind.yml
+++ b/1502/01_mastermind.yml
@@ -88,7 +88,7 @@ submissions:
       REPL Interface and Game Functionality: 0
       Breaking Logic into Components: 0
   Michael Merrill
-    repository: your_github_repo_url
+    repository: https://github.com/michaelkm/mastermind
     notes: '(filled in by instructor)'
     evaluation:
       Fundamental Ruby & Style: 0
