--- a/1502/01_mastermind.yml
+++ b/1502/01_mastermind.yml
@@ -112,7 +112,7 @@ submissions:
       REPL Interface and Game Functionality: 0
       Breaking Logic into Components: 0
   Minnie Lee
-    repository: your_github_repo_url
+    repository: https://github.com/MLee21/Mastermind
     notes: '(filled in by instructor)'
     evaluation:
       Fundamental Ruby & Style: 0
