--- a/1502/01_mastermind.yml
+++ b/1502/01_mastermind.yml
@@ -96,7 +96,7 @@ submissions:
       REPL Interface and Game Functionality: 0
       Breaking Logic into Components: 0
   Michelle Golle
-    repository: your_github_repo_url
+    repository: https://github.com/MichelleGolle/Mastermind
     notes: '(filled in by instructor)'
     evaluation:
       Fundamental Ruby & Style: 0
