--- a/1502/01_mastermind.yml
+++ b/1502/01_mastermind.yml
@@ -160,7 +160,8 @@ submissions:
       REPL Interface and Game Functionality: 0
       Breaking Logic into Components: 0
   Tracy Caruso
-    repository: your_github_repo_url
+    repository: https://github.com/ycartc/MasterMindFinal
+    repository2: https://github.com/ycartc/MasterMinded
     notes: '(filled in by instructor)'
     evaluation:
       Fundamental Ruby & Style: 0
