--- a/1502/01_mastermind.yml
+++ b/1502/01_mastermind.yml
@@ -56,7 +56,7 @@ submissions:
       REPL Interface and Game Functionality: 0
       Breaking Logic into Components: 0
   Jamie Kawahara
-    repository: your_github_repo_url
+    repository: https://github.com/androidgrl/mastermind2
     notes: '(filled in by instructor)'
     evaluation:
       Fundamental Ruby & Style: 0
