--- a/1502/01_mastermind.yml
+++ b/1502/01_mastermind.yml
@@ -173,7 +173,7 @@ submissions:
       REPL Interface and Game Functionality: 0
       Breaking Logic into Components: 0
   Tyler Graham
-    repository: your_github_repo_url
+    repository: https://github.com/tgraham777/master_mind
     notes: '(filled in by instructor)'
     evaluation:
       Fundamental Ruby & Style: 0
