--- a/1502/01_mastermind.yml
+++ b/1502/01_mastermind.yml
@@ -17,7 +17,7 @@ submissions:
       REPL Interface and Game Functionality: 0
       Breaking Logic into Components: 0
   David Daniel
-    repository: your_github_repo_url
+    repository: https://github.com/davedan7/Mastermind_Game.git
     notes: '(filled in by instructor)'
     evaluation:
       Fundamental Ruby & Style: 0
