--- a/1412/04_rails_mini_project/04_rails_mini_project.yml
+++ b/1412/04_rails_mini_project/04_rails_mini_project.yml
@@ -18,7 +18,7 @@ submissions:
     repository: https://github.com/...
     setup_notes: ""
   Kyra:
-    repository: https://github.com/...
+    repository: https://github.com/kyraweber/point_box
     setup_notes: ""
   Austin:
     repository: https://github.com/...
