--- a/1412/04_rails_mini_project/04_rails_mini_project.yml
+++ b/1412/04_rails_mini_project/04_rails_mini_project.yml
@@ -42,6 +42,6 @@ submissions:
     repository: https://github.com/...
     setup_notes: ""
   Miriam:
-    repository: https://github.com/...
+    repository: https://github.com/mirjoy/point_box
     setup_notes: ""
 
