--- a/1412/04_rails_mini_project/04_rails_mini_project.yml
+++ b/1412/04_rails_mini_project/04_rails_mini_project.yml
@@ -12,7 +12,7 @@ submissions:
     repository: https://github.com/...
     setup_notes: ""
   Markus:
-    repository: https://github.com/...
+    repository: https://github.com/neslom/point-box
     setup_notes: ""
   Stanley:
     repository: https://github.com/...
