--- a/1412/04_rails_mini_project/04_rails_mini_project.yml
+++ b/1412/04_rails_mini_project/04_rails_mini_project.yml
@@ -27,7 +27,7 @@ submissions:
     repository: https://github.com/...
     setup_notes: ""
   Lori:
-    repository: https://github.com/...
+    repository: https://github.com/loriculberson/idea_box
     setup_notes: ""
   Tino:
     repository: https://github.com/...
