Kristina's Web Guesser URL

--- a/1502/module_2_prep/webguesser.yml
+++ b/1502/module_2_prep/webguesser.yml
@@ -27,7 +27,7 @@ submissions:
     repository: 
     notes: ""
   Kristina Brown:
-    repository: 
+    repository: https://github.com/kristinabrown/web-guesser 
     notes: ""
   Kyle Henson:
     repository:
