--- a/1502/module_2_prep/webguesser.yml
+++ b/1502/module_2_prep/webguesser.yml
@@ -1,12 +1,12 @@
 submissions:
   Andrew Carmer:
-    repository:
-    notes: ""
+    repository: https://github.com/carmer/web_guesser.git
+    notes: "First draft of web_guesser made with Sinatra"
   Chelsea Worrel:
     repository:
     notes: ""
   David Daniel:
-    repository:
+    repository: https://github.com/davedan7/web_checker
     notes: ""
   Dmitry Vizersky:
     repository:
@@ -21,13 +21,13 @@ submissions:
     repository:
     notes: ""
   Jamie Kawahara:
-    repository:
+    repository: https://github.com/androidgrl/webguesser
     notes: ""
   Kenny Chen:
     repository:
     notes: ""
   Kristina Brown:
-    repository:
+    repository: https://github.com/kristinabrown/web-guesser 
     notes: ""
   Kyle Henson:
     repository:
@@ -42,7 +42,7 @@ submissions:
     repository:
     notes: ""
   Minnie Lee:
-    repository:
+    repository: https://github.com/MLee21/web_guesser
     notes: ""
   Patrick Medaugh:
     repository:
@@ -51,7 +51,7 @@ submissions:
     repository:
     notes: ""
   Tess Griffin:
-    repository:
+    repository: https://github.com/tessgriffin/webguesser
     notes: ""
   Thomas Leskin:
     repository: https://github.com/tleskin/web_guesser
