Adding link to Tess's repo

--- a/1502/module_2_prep/personal_html_css.yml
+++ b/1502/module_2_prep/personal_html_css.yml
@@ -50,7 +50,7 @@ submissions:
   Rob Cornell:
     repository: 
     notes: ""
-  Tess Griffin:
+  Tess Griffin: https://github.com/tessgriffin/portfolio_site
     repository: 
     notes: ""
   Thomas Leskin:
