added links for Kenny task manager and web guesser

--- a/1502/module_2_prep/task_manager.yml
+++ b/1502/module_2_prep/task_manager.yml
@@ -1,67 +1,67 @@
 submissions:
   Andrew Carmer:
-    repository: 
+    repository:
     notes: ""
   Chelsea Worrel:
-    repository: 
+    repository:
     notes: ""
   David Daniel:
-    repository: 
+    repository:
     notes: ""
   Dmitry Vizersky:
-    repository: 
+    repository:
     notes: ""
   Eric Dowty:
-    repository: 
+    repository:
     notes: ""
   Eugene Khanutin:
-    repository: 
+    repository:
     notes: ""
   Jack Yeh:
-    repository: 
+    repository:
     notes: ""
   Jamie Kawahara:
-    repository: 
+    repository:
     notes: ""
   Kenny Chen:
-    repository: 
+    repository: https://github.com/boomkenster/task_manager
     notes: ""
   Kristina Brown:
-    repository: 
+    repository:
     notes: ""
   Kyle Henson:
     repository:
     notes: ""
   Michael Merrill:
-    repository: 
+    repository:
     notes: ""
   Michelle Golle:
-    repository: 
+    repository:
     notes: ""
   Mihir Parikh:
-    repository: 
+    repository:
     notes: ""
   Minnie Lee:
-    repository: 
+    repository:
     notes: ""
   Patrick Medaugh:
-    repository: 
+    repository:
     notes: ""
   Rob Cornell:
-    repository: 
+    repository:
     notes: ""
   Tess Griffin:
-    repository: 
+    repository:
     notes: ""
   Thomas Leskin:
-    repository: 
+    repository:
     notes: ""
   Tony DiNitto:
-    repository: 
+    repository:
     notes: ""
   Tracy Caruso:
-    repository: 
+    repository:
     notes: ""
   Tyler Graham:
-    repository: 
+    repository:
     notes: ""
