--- a/1502/module_2_prep/webguesser.yml
+++ b/1502/module_2_prep/webguesser.yml
@@ -23,11 +23,11 @@ submissions:
   Jamie Kawahara:
     repository: https://github.com/androidgrl/webguesser
     notes: ""
-  Kenny Chen:
+  Kenny Chen: https://github.com/boomkenster/Web_Guesser
     repository:
     notes: ""
   Kristina Brown:
-    repository: https://github.com/kristinabrown/web-guesser 
+    repository: https://github.com/kristinabrown/web-guesser
     notes: ""
   Kyle Henson:
     repository:
