--- a/1502/module_2_prep/personal_html_css.yml
+++ b/1502/module_2_prep/personal_html_css.yml
@@ -29,8 +29,8 @@ submissions:
   Mihir Parikh:
     repository: 
     notes: ""
-  Minnie Lee:
-    repository: 
+  Minnie Lee: 
+    repository: https://github.com/MLee21/personal_web_page
     notes: ""
   Patrick Medaugh:
     repository: 
