--- a/1502/module_2_prep/webguesser.yml
+++ b/1502/module_2_prep/webguesser.yml
@@ -30,7 +30,7 @@ submissions:
     repository: https://github.com/kristinabrown/web-guesser 
     notes: ""
   Kyle Henson:
-    repository:
+    repository: https://github.com/kylehenson/web_guesser
     notes: ""
   Michael Merrill:
     repository:
