--- a/1502/module_2_prep/webguesser.yml
+++ b/1502/module_2_prep/webguesser.yml
@@ -59,7 +59,7 @@ submissions:
   Tony DiNitto:
     repository:
     notes: ""
-  Tracy Caruso:
+  Tracy Caruso: https://github.com/ycartc/web_guesser
     repository:
     notes: ""
   Tyler Graham:
