Tracy's Web Guesser

--- a/1502/module_2_prep/webguesser.yml
+++ b/1502/module_2_prep/webguesser.yml
@@ -27,7 +27,7 @@ submissions:
     repository:
     notes: ""
   Kristina Brown:
-    repository: https://github.com/kristinabrown/web-guesser 
+    repository: https://github.com/kristinabrown/web-guesser
     notes: ""
   Kyle Henson:
     repository:
@@ -59,7 +59,7 @@ submissions:
   Tony DiNitto:
     repository:
     notes: ""
-  Tracy Caruso:
+  Tracy Caruso: https://github.com/ycartc/web_guesser
     repository:
     notes: ""
   Tyler Graham:
