--- a/1502/module_2_prep/webguesser.yml
+++ b/1502/module_2_prep/webguesser.yml
@@ -39,7 +39,7 @@ submissions:
     repository:
     notes: ""
   Mihir Parikh:
-    repository:
+    repository: https://github.com/mihir787/web_guesser
     notes: ""
   Minnie Lee:
     repository: https://github.com/MLee21/web_guesser
