tracy and kenny personal websites

--- a/1502/module_2_prep/personal_html_css.yml
+++ b/1502/module_2_prep/personal_html_css.yml
@@ -2,19 +2,10 @@ submissions:
   Andrew Carmer:
     repository: 
     notes: ""
-  Chelsea Worrel:
-    repository: 
-    notes: ""
   David Daniel:
     repository: 
     notes: ""
-  Dmitry Vizersky:
-    repository: 
-    notes: ""
   Eric Dowty:
-    repository: 
-    notes: ""
-  Eugene Khanutin:
     repository: 
     notes: ""
   Jack Yeh:
@@ -24,16 +15,13 @@ submissions:
     repository: 
     notes: ""
   Kenny Chen:
-    repository: 
+    repository: https://github.com/boomkenster/interest_site
     notes: ""
   Kristina Brown:
     repository: 
     notes: ""
   Kyle Henson:
     repository:
-    notes: ""
-  Michael Merrill:
-    repository: 
     notes: ""
   Michelle Golle:
     repository: 
@@ -47,10 +35,7 @@ submissions:
   Patrick Medaugh:
     repository: 
     notes: ""
-  Rob Cornell:
-    repository: 
-    notes: ""
-  Tess Griffin: https://github.com/tessgriffin/portfolio_site
+  Tess Griffin:
     repository: 
     notes: ""
   Thomas Leskin:
@@ -60,8 +45,8 @@ submissions:
     repository: 
     notes: ""
   Tracy Caruso:
-    repository: 
-    notes: ""
+    repository: https://github.com/ycartc/personal_website
+    notes: http://tracymcaruso.com/
   Tyler Graham:
     repository: 
     notes: ""
