--- a/1502/01_mastermind.yml
+++ b/1502/01_mastermind.yml
@@ -210,6 +210,8 @@ submissions:
   Minnie Lee
     repository: your_github_repo_url
     notes: 'Needs to break down runon methods. Nice use of modules, but no clarity on why. More and better tests required.'
+    repository: https://github.com/MLee21/Mastermind
+    notes: '(filled in by instructor)'
     evaluation:
       Fundamental Ruby & Style: 3
       Test-Driven Development: 2
