--- a/1502/module_2_prep/personal_html_css.yml
+++ b/1502/module_2_prep/personal_html_css.yml
@@ -29,7 +29,7 @@ submissions:
   Mihir Parikh:
     repository: 
     notes: ""
-  Minnie Lee: 
+  Minnie Lee: https://github.com/MLee21/personal_web_page
     repository: https://github.com/MLee21/personal_web_page
     notes: ""
   Patrick Medaugh:
