--- a/1502/module_2_prep/personal_html_css.yml
+++ b/1502/module_2_prep/personal_html_css.yml
@@ -36,7 +36,7 @@ submissions:
     repository: 
     notes: ""
   Tess Griffin:
-    repository: 
+    repository: https://github.com/tessgriffin/portfolio_site
     notes: ""
   Thomas Leskin:
     repository: 
