--- a/1502/module_2_prep/webguesser.yml
+++ b/1502/module_2_prep/webguesser.yml
@@ -63,5 +63,5 @@ submissions:
     repository:
     notes: ""
   Tyler Graham:
-    repository:
+    repository: https://github.com/tgraham777/web_guesser
     notes: ""
