add url for appstarter

--- a/1502/module_2_prep/personal_html_css.yml
+++ b/1502/module_2_prep/personal_html_css.yml
@@ -12,7 +12,7 @@ submissions:
     repository: 
     notes: ""
   Jamie Kawahara:
-    repository: 
+    repository: http://github.com/androidgrl/appstarter
     notes: ""
   Kenny Chen:
     repository: https://github.com/boomkenster/interest_site
