Adding repo link for Tess's task manager

--- a/1502/module_2_prep/task_manager.yml
+++ b/1502/module_2_prep/task_manager.yml
@@ -50,7 +50,7 @@ submissions:
   Rob Cornell:
     repository:
     notes: ""
-  Tess Griffin:
+  Tess Griffin: https://github.com/tessgriffin/task_manager
     repository:
     notes: ""
   Thomas Leskin:
