--- a/1502/module_2_prep/personal_html_css.yml
+++ b/1502/module_2_prep/personal_html_css.yml
@@ -33,7 +33,7 @@ submissions:
     repository: https://github.com/MLee21/personal_web_page
     notes: ""
   Patrick Medaugh:
-    repository: 
+    repository: https://github.com/patrickmedaugh/htmlsample
     notes: ""
   Tess Griffin:
     repository: https://github.com/tessgriffin/portfolio_site
