--- a/1502/module_2_prep/personal_html_css.yml
+++ b/1502/module_2_prep/personal_html_css.yml
@@ -39,8 +39,8 @@ submissions:
     repository: https://github.com/tessgriffin/portfolio_site
     notes: ""
   Thomas Leskin:
-    repository: 
-    notes: ""
+    repository: https://github.com/tleskin/personal_site
+    notes: http://leskin.ninja
   Tony DiNitto:
     repository: 
     notes: ""
