--- a/1502/module_2_prep/webguesser.yml
+++ b/1502/module_2_prep/webguesser.yml
@@ -18,7 +18,7 @@ submissions:
     repository:
     notes: ""
   Jack Yeh:
-    repository:
+    repository: https://github.com/jxandery/web_guesser
     notes: ""
   Jamie Kawahara:
     repository: https://github.com/androidgrl/webguesser
