--- a/1502/module_2_prep/personal_html_css.yml
+++ b/1502/module_2_prep/personal_html_css.yml
@@ -18,13 +18,13 @@ submissions:
     repository: https://github.com/boomkenster/interest_site
     notes: ""
   Kristina Brown:
-    repository: 
-    notes: ""
+    repository: https://github.com/kristinabrown/personal-webpage
+    notes: "http://kristinabrown.github.io/personal-webpage/ and http://kristinabrown.github.io/personal-webpage-bootstrapped/"
   Kyle Henson:
-    repository:
+    repository: https://github.com/kylehenson/personal_webpage
     notes: ""
   Michelle Golle:
-    repository: 
+    repository: https://github.com/MichelleGolle/personal-website
     notes: ""
   Mihir Parikh:
     repository: 
