add andrew's repos

--- a/1502/module_2_prep/personal_html_css.yml
+++ b/1502/module_2_prep/personal_html_css.yml
@@ -1,6 +1,6 @@
 submissions:
   Andrew Carmer:
-    repository: 
+    repository: https://github.com/carmer/andrewcarmer.com
     notes: ""
   David Daniel:
     repository: 
