--- a/1502/module_2_prep/task_manager.yml
+++ b/1502/module_2_prep/task_manager.yml
@@ -1,6 +1,6 @@
 submissions:
   Andrew Carmer:
-    repository:
+    repository: https://github.com/carmer/task_manager
     notes: ""
   Chelsea Worrel:
     repository:
