David Daniel task_manager

--- a/1502/module_2_prep/task_manager.yml
+++ b/1502/module_2_prep/task_manager.yml
@@ -5,7 +5,7 @@ submissions:
   Chelsea Worrel:
     repository:
     notes: ""
-  David Daniel:
+  David Daniel: https://github.com/davedan7/task_manager
     repository:
     notes: ""
   Dmitry Vizersky:
