--- a/1502/module_2_prep/personal_html_css.yml
+++ b/1502/module_2_prep/personal_html_css.yml
@@ -19,8 +19,7 @@ submissions:
     notes: ""
   Kristina Brown:
     repository: https://github.com/kristinabrown/personal-webpage
-    notes: http://kristinabrown.github.io/personal-webpage/ 
-    and a bootstrap version for fun: http://kristinabrown.github.io/personal-webpage-bootstrapped/
+    notes: http://kristinabrown.github.io/personal-webpage/ and http://kristinabrown.github.io/personal-webpage-bootstrapped/
   Kyle Henson:
     repository: https://github.com/kylehenson/personal_webpage
     notes: ""
