--- a/1502/module_2_prep/personal_html_css.yml
+++ b/1502/module_2_prep/personal_html_css.yml
@@ -27,7 +27,7 @@ submissions:
     repository: https://github.com/MichelleGolle/personal-website
     notes: ""
   Mihir Parikh:
-    repository: 
+    repository: https://github.com/mihir787/personal_website 
     notes: ""
   Minnie Lee: https://github.com/MLee21/personal_web_page
     repository: https://github.com/MLee21/personal_web_page
