--- a/1502/module_2_prep/task_manager.yml
+++ b/1502/module_2_prep/task_manager.yml
@@ -41,8 +41,8 @@ submissions:
   Mihir Parikh:
     repository:
     notes: ""
-  Minnie Lee:
-    repository:
+  Minnie Lee: 
+    repository: https://github.com/MLee21/task_manager
     notes: ""
   Patrick Medaugh:
     repository:
