--- a/1502/module_2_prep/task_manager.yml
+++ b/1502/module_2_prep/task_manager.yml
@@ -45,7 +45,7 @@ submissions:
     repository:
     notes: ""
   Patrick Medaugh:
-    repository:
+    repository: https://github.com/patrickmedaugh/Task-Manager
     notes: ""
   Rob Cornell:
     repository:
