--- a/1502/module_2_prep/webguesser.yml
+++ b/1502/module_2_prep/webguesser.yml
@@ -11,8 +11,8 @@ submissions:
   Dmitry Vizersky:
     repository:
     notes: ""
-  Eric Dowty:
-    repository:
+  Eric Dowty: 
+    repository: https://github.com/eric-dowty/web_guesser
     notes: ""
   Eugene Khanutin:
     repository:
