--- a/1502/module_2_prep/task_manager.yml
+++ b/1502/module_2_prep/task_manager.yml
@@ -12,7 +12,7 @@ submissions:
     repository:
     notes: ""
   Eric Dowty:
-    repository:
+    repository: https://github.com/eric-dowty/task_manager
     notes: ""
   Eugene Khanutin:
     repository:
