--- a/1502/module_2_prep/task_manager.yml
+++ b/1502/module_2_prep/task_manager.yml
@@ -38,7 +38,7 @@ submissions:
   Michelle Golle:
     repository:
     notes: ""
-  Mihir Parikh:
+  Mihir Parikh: https://github.com/mihir787/task_mananger
     repository:
     notes: ""
   Minnie Lee:
