--- a/1502/module_2_prep/personal_html_css.yml
+++ b/1502/module_2_prep/personal_html_css.yml
@@ -6,7 +6,7 @@ submissions:
     repository: 
     notes: ""
   Eric Dowty:
-    repository: 
+    repository: https://github.com/eric-dowty/personal_website
     notes: ""
   Jack Yeh:
     repository: 
