--- a/1502/module_2_prep/task_manager.yml
+++ b/1502/module_2_prep/task_manager.yml
@@ -18,7 +18,7 @@ submissions:
     repository:
     notes: ""
   Jack Yeh:
-    repository:
+    repository:https://github.com/jxandery/task_manager
     notes: ""
   Jamie Kawahara:
     repository:
