Added Tom Leskin's Task Manager repo link

--- a/1502/module_2_prep/task_manager.yml
+++ b/1502/module_2_prep/task_manager.yml
@@ -54,7 +54,7 @@ submissions:
     repository:
     notes: ""
   Thomas Leskin:
-    repository:
+    repository: https://github.com/tleskin/task_manager
     notes: ""
   Tony DiNitto:
     repository:
