--- a/1502/authentication_rails.yml
+++ b/1502/authentication_rails.yml
@@ -15,7 +15,7 @@ submissions:
     repository: 
     notes: ""
   Kristina Brown:
-    repository:
+    repository: https://github.com/kristinabrown/my-jams
     notes: 
   Kyle Henson:
     repository: 
