--- a/1502/authentication_rails.yml
+++ b/1502/authentication_rails.yml
@@ -36,7 +36,7 @@ submissions:
     repository: 
     notes: ""
   Thomas Leskin:
-    repository: 
+    repository: https://github.com/tleskin/my-jams
     notes: 
   Tracy Caruso:
     repository: 
