--- a/1502/authentication_rails.yml
+++ b/1502/authentication_rails.yml
@@ -12,7 +12,7 @@ submissions:
     repository: 
     notes: ""
   Kenny Chen:
-    repository: 
+    repository: https://github.com/boomkenster/my-jams
     notes: ""
   Kristina Brown:
     repository: https://github.com/kristinabrown/my-jams
