Added David's my_jams

--- a/1502/authentication_rails.yml
+++ b/1502/authentication_rails.yml
@@ -2,8 +2,8 @@ submissions:
   Andrew Carmer:
     repository: 
     notes: ""
-  David Daniel:
-    repository: 
+  David Daniel: 
+    repository: https://github.com/davedan7/my_jams 
     notes: ""
   Eric Dowty:
     repository:
