--- a/1502/authentication_rails.yml
+++ b/1502/authentication_rails.yml
@@ -27,7 +27,7 @@ submissions:
     repository: 
     notes: ""
   Minnie Lee: 
-    repository: 
+    repository: https://github.com/MLee21/my-jams-rails
     notes: ""
   Patrick Medaugh:
     repository:
