Eric's sweet jams

--- a/1502/authentication_rails.yml
+++ b/1502/authentication_rails.yml
@@ -5,8 +5,8 @@ submissions:
   David Daniel:
     repository: 
     notes: ""
-  Eric Dowty:
-    repository:
+  Eric Dowty: 
+    repository: https://github.com/eric-dowty/my-jams
     notes: ""
   Jack Yeh:
     repository: 
