added my_jams link to repo

--- a/1502/authentication_rails.yml
+++ b/1502/authentication_rails.yml
@@ -1,43 +1,43 @@
 submissions:
   Andrew Carmer:
-    repository: 
+    repository: https://github.com/Carmer/my_jams
     notes: ""
-  David Daniel: 
-    repository: https://github.com/davedan7/my_jams 
+  David Daniel:
+    repository: https://github.com/davedan7/my_jams
     notes: ""
-  Eric Dowty: 
+  Eric Dowty:
     repository: https://github.com/eric-dowty/my-jams
     notes: ""
   Jack Yeh:
-    repository: 
+    repository:
     notes: ""
   Kenny Chen:
     repository: https://github.com/boomkenster/my-jams
     notes: ""
   Kristina Brown:
     repository: https://github.com/kristinabrown/my-jams
-    notes: 
+    notes:
   Kyle Henson:
-    repository: 
+    repository:
     notes: ""
   Michelle Golle:
-    repository: 
+    repository:
     notes: ""
   Mihir Parikh:
-    repository: 
+    repository:
     notes: ""
-  Minnie Lee: 
+  Minnie Lee:
     repository: https://github.com/MLee21/my-jams-rails
     notes: ""
   Patrick Medaugh:
     repository:
     notes: ""
   Tess Griffin:
-    repository: 
+    repository:
     notes: ""
   Thomas Leskin:
     repository: https://github.com/tleskin/my-jams
-    notes: 
+    notes:
   Tracy Caruso:
-    repository: 
-    notes: 
+    repository:
+    notes:
