--- a/1502/authentication_rails.yml
+++ b/1502/authentication_rails.yml
@@ -18,7 +18,7 @@ submissions:
     repository: https://github.com/kristinabrown/my-jams
     notes: 
   Kyle Henson:
-    repository: 
+    repository: https://github.com/kylehenson/my_jams
     notes: ""
   Michelle Golle:
     repository: 
