--- a/1502/authentication_rails.yml
+++ b/1502/authentication_rails.yml
@@ -29,7 +29,7 @@ submissions:
   Minnie Lee: 
     repository: https://github.com/MLee21/my-jams-rails
     notes: ""
-  Patrick Medaugh:
+  Patrick Medaugh: https://github.com/patrickmedaugh/my_jams
     repository:
     notes: ""
   Tess Griffin:
