--- a/1502/authentication_rails.yml
+++ b/1502/authentication_rails.yml
@@ -1,6 +1,6 @@
 submissions:
   Andrew Carmer:
-    repository: 
+    repository: https://github.com/Carmer/my_jams
     notes: ""
   David Daniel: 
     repository: https://github.com/davedan7/my_jams 
