--- a/1502/authentication_rails.yml
+++ b/1502/authentication_rails.yml
@@ -21,7 +21,7 @@ submissions:
     repository: https://github.com/kylehenson/my_jams
     notes: ""
   Michelle Golle:
-    repository: 
+    repository: https://github.com/MichelleGolle/my-jams
     notes: ""
   Mihir Parikh:
     repository: 
