Kristina's mini project url

--- a/1502/05_rails_mini_project.yml
+++ b/1502/05_rails_mini_project.yml
@@ -15,8 +15,8 @@ submissions:
     repository: 
     notes: ""
   Kristina Brown:
-    repository:
-    notes: 
+    repository: https://github.com/kristinabrown/point-box
+    notes: https://powerful-escarpment-5280.herokuapp.com
   Kyle Henson:
     repository: 
     notes: ""
