added my link to Point-box

--- a/1502/05_rails_mini_project.yml
+++ b/1502/05_rails_mini_project.yml
@@ -1,43 +1,43 @@
 submissions:
   Andrew Carmer:
-    repository: 
+    repository: https://github.com/Carmer/Point_Box
     notes: ""
   David Daniel:
-    repository: 
+    repository:
     notes: ""
   Eric Dowty:
     repository:
     notes: ""
   Jack Yeh:
-    repository: 
+    repository:
     notes: ""
   Kenny Chen:
-    repository: 
+    repository:
     notes: ""
   Kristina Brown:
     repository:
-    notes: 
+    notes:
   Kyle Henson:
-    repository: 
+    repository:
     notes: ""
   Michelle Golle:
-    repository: 
+    repository:
     notes: ""
   Mihir Parikh:
-    repository: 
+    repository:
     notes: ""
-  Minnie Lee: 
-    repository: 
+  Minnie Lee:
+    repository:
     notes: ""
   Patrick Medaugh:
     repository:
     notes: ""
   Tess Griffin:
-    repository: 
+    repository:
     notes: ""
   Thomas Leskin:
-    repository: 
-    notes: 
+    repository:
+    notes:
   Tracy Caruso:
-    repository: 
-    notes: 
+    repository:
+    notes:
