Adding Tess's mini-project link

--- a/1502/05_rails_mini_project.yml
+++ b/1502/05_rails_mini_project.yml
@@ -33,7 +33,7 @@ submissions:
     repository:
     notes: ""
   Tess Griffin:
-    repository: 
+    repository: https://github.com/tessgriffin/point_box
     notes: ""
   Thomas Leskin:
     repository: 
