--- a/1502/05_rails_mini_project.yml
+++ b/1502/05_rails_mini_project.yml
@@ -24,8 +24,8 @@ submissions:
     repository: 
     notes: ""
   Mihir Parikh:
-    repository: 
-    notes: ""
+    repository: https://github.com/mihir787/ideabox
+    notes: "need to still add functionality to join picture with idea but jointable created."
   Minnie Lee: 
     repository: 
     notes: ""
