--- a/1502/05_rails_mini_project.yml
+++ b/1502/05_rails_mini_project.yml
@@ -17,9 +17,9 @@ submissions:
   Kristina Brown:
     repository: https://github.com/kristinabrown/point-box
     notes: https://enigmatic-springs-4476.herokuapp.com
-  Kyle Henson:
-    repository: 
-    notes: ""
+  Kyle Henson: 
+    repository: https://github.com/kylehenson/idea_box
+    notes: "Tried out minitest....wrong idea"
   Michelle Golle:
     repository: 
     notes: ""
